libs/toolkit-macros-tests/tests/ui/fail/gear_name_ends_hyphen.stderr
error: gear name must not end with a hyphen
 --> tests/ui/fail/gear_name_ends_hyphen.rs:6:12
  |
6 |     name = "parser-",  // Should fail: ends with hyphen
  |            ^^^^^^^^^
